--- a/scss/_create.scss
+++ b/scss/_create.scss
@@ -39,12 +39,11 @@
         content: "";
         position: absolute;
         left: 0;
-        top: 50%;
+        top: 10px;
         width: 6px;
         height: 6px;
         border-radius: 50%;
         background-color: #000;
-        transform: translateY(-50%);
       }
     }
   }
