--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -684,7 +684,7 @@ a {
 
 .menu-tag-btn:hover {
   @include m($md) {
-    color: rgba(255, 255, 255, 0.5);
-    background-color: transparent;
+    color: rgba(255, 255, 255, 0.5) !important;
+    background-color: transparent !important;
   }
 }
