--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -451,10 +451,10 @@ a {
   &::after {
     content: "";
     position: absolute;
-    right: 0;
+    right: -10%;
     top: 0;
     z-index: 5;
-    width: 82px;
+    width: 10%;
     height: 24px;
     background-image: linear-gradient(270deg, #000 0%, rgba(0, 0, 0, 0) 100%);
 
@@ -649,4 +649,11 @@ a {
     color: #000 !important;
     background-color: #fff !important;
   }
+}
+
+.swiper {
+  margin-right: auto;
+  margin-left: 0;
+  width: 90%;
+  overflow: inherit;
 }
