--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -339,23 +339,8 @@ a {
   margin: 0;
 
   .swiper {
-    &::before {
-      content: "";
-      position: absolute;
-      left: 0;
-      top: 0;
-      z-index: 5;
-      display: none;
-      width: 92px;
-      height: 27px;
-      background-image: linear-gradient(270deg, #000 0%, rgba(0, 0, 0, 0) 100%);
-      transform: rotate(-180deg);
-
-      @include m($md) {
-        display: block;
-        width: 60px;
-      }
-    }
+    position: relative;
+    height: 27px;
 
     &::after {
       content: "";
@@ -363,7 +348,7 @@ a {
       right: 0;
       top: 0;
       z-index: 5;
-      width: 92px;
+      width: 90px;
       height: 27px;
       background-image: linear-gradient(270deg, #000 0%, rgba(0, 0, 0, 0) 100%);
 
@@ -372,53 +357,9 @@ a {
       }
     }
 
-    .swiper-button-prev-tag,
-    .swiper-button-next-tag {
-      position: absolute;
-      top: 0;
-      z-index: 10;
-      display: none;
-      margin: 0;
-      padding: 0;
-      width: 24px;
-      height: 27px;
-      outline: none;
-      border: none;
-      cursor: pointer;
-
-      &::before {
-        position: absolute;
-        top: 50%;
-        width: 24px;
-        height: 24px;
-        transform: translateY(-50%);
-      }
-
-      &::after {
-        display: none;
-      }
-
-      @include m($md) {
-        display: block;
-      }
-    }
-
-    .swiper-button-next-tag {
-      right: 0;
-
-      &::before {
-        content: url("../images/arrow-white.svg");
-        right: 0;
-      }
-    }
-
-    .swiper-button-prev-tag {
+    .swiper-wrapper {
       left: 0;
-
-      &::before {
-        content: url("../images/arrow-white-left.svg");
-        left: 0;
-      }
+      margin-left: auto;
     }
   }
 }
@@ -426,43 +367,18 @@ a {
 #swiper-cat {
   position: relative;
 
-  &::before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 5;
-    display: none;
-    width: 82px;
-    height: 24px;
-    transform: rotate(-180deg);
-
-    @include m($md) {
-      display: block;
-      width: 50px;
-    }
-
-    @include m($sm) {
-      width: 40px;
-    }
-  }
-
   &::after {
     content: "";
     position: absolute;
     right: 0;
     top: 0;
     z-index: 5;
-    width: 10%;
+    width: 90px;
     height: 24px;
     background-image: linear-gradient(270deg, #000 0%, rgba(0, 0, 0, 0) 100%);
 
     @include m($md) {
-      width: 50px;
-    }
-
-    @include m($sm) {
-      width: 40px;
+      width: 60px;
     }
   }
 
@@ -648,9 +564,14 @@ a {
     color: #000 !important;
     background-color: #fff !important;
   }
+
+  #swiper-cat,
+  #swiper-tag-box {
+    padding-right: 60px !important;
+  }
 }
 
 #swiper-cat,
-#swiper-tag {
-  padding-right: 100px;
+#swiper-tag-box {
+  padding-right: 90px !important;
 }
