--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -556,12 +556,9 @@ a {
   display: none;
 }
 
-.shadow-slide-cat {
-  width: 55px !important;
-}
-
 .shadow-slide-tag {
-  width: 55px !important;
+  visibility: hidden;
+  opacity: 0;
 }
 
 @media screen and (max-width: 750px) {
